# fe2io-python

./: .gitignore  CONTRIBUTORS  LICENSE  MainUI.py  MainUI.ui  MainUI_ui.py  README.md  build.bat  build.spec  main.spec  pyproject.toml  requirements.txt  to-do.txt
sources/: audioPlayer.py  main.py  window.py
sources/ui/: MainUI.ui  MainUI_ui.py
translations/: id-ID.ts  ja-JP.ts  zh-TW.ts  zh-ZH.ts
