# pyproject.toml

[project]
name = "YourProjectName"
version = "0.1.0"

[build-system]
requires = ["setuptools>=42", "wheel", "sip-build>=0.11.1"]
build-backend = "setuptools.build_meta"

[tool.sip]
sip-include-dirs = ["include"]  # Adjust if needed

[tool.sip.metadata]
name = "YourProjectName"
version = "0.1.0"

[tool.sip.qt-translations]
ui-files = ["MainUI.ui"]  # List all your .ui files
translations = ["translations/*.ts"]

[tool.sip.qt-uic]
output-directory = "sources"
sources = ["MainUI.ui"]  # List all your .ui files

[tool.sip.qt-lrelease]
translations = ["translations/*.ts"]

[tool.setuptools.build_meta]
requires = ["sip >= 5.5.0"]

[tool.pyinstaller.scripts]
paths = ["sources/main.py"]  # Adjust as needed

[tool.pyinstaller]
hidden-imports = ["sip"]  # Ensure that SIP is included in the executable

[tool.pyinstaller.options]
console = False  # Set to True if you want a console window, False for a windowed executable
